Fix absolutely positioned elements and children from displaying off-screen.  Fixes 308b376a77a67667ff86a456cc05daff0e72e5f2.

--- a/client/galaxy/style/scss/base.scss
+++ b/client/galaxy/style/scss/base.scss
@@ -105,6 +105,8 @@ body {
     @extend .d-flex;
     @extend .flex-column;
     @extend .full-content;
+    top: 0px;
+    left: 0px;
 }
 
 #columns {
